Fix table feed overflow issue

--- a/sass/partials/_tableFeed.scss
+++ b/sass/partials/_tableFeed.scss
@@ -2,6 +2,8 @@
   width: 100%;
 
   .container__content {
+    flex-direction: column;
+
     @include desktop {
       width: 72.5%;
       margin-bottom: 0;
@@ -19,42 +21,45 @@ aside.aside {
   &__item {
     display: flex;
     color: $text-color-alternate;
-    @include rem(margin-bottom, 10);
+    @include rem(margin-bottom, 16);
 
-    &:first-child {
+    &:last-child {
       margin-bottom: 0;
     }
 
     &__avatar {
-      @include rem(margin-right, 16);
+      @include rem(margin-right, 12);
 
       img {
         border-radius: 6px;
-        @include rem(width, 40);
-        @include rem(height, 40);
+        @include rem(width, 34);
+        @include rem(height, 34);
       }
     }
     &__info {
       display: flex;
+      width: 100%;
       flex-direction: column;
+      border-bottom: 1.6px solid whitesmoke;
 
       &__text {
         @include rem(font-size, 12);
 
         @include desktop {
-          @include rem(font-size, 15);
+          @include rem(font-size, 14);
         }
 
         &__author {
-          font-weight: 500;
+          font-weight: 400;
           color: $text-color;
         }
         &__message {
-          font-weight: 500;
+          font-weight: 400;
         }
       }
       &__time {
         @include rem(margin-top, -4);
+        @include rem(margin-bottom, 8);
 
         span {
           color: lighten($text-color-alternate, 12%);
